Add download resume button with proper filename

--- a/index.html
+++ b/index.html
@@ -809,6 +809,9 @@
                 Passionate about 5G networks, penetration testing, and building scalable applications.
             </p>
             <a href="#contact" class="btn fade-in stagger-3">Get In Touch</a>
+            <a href="MyResume__1_.pdf" class="btn fade-in stagger-3" download="RoshanAliShaik_Resume.pdf" style="margin-left: 1rem;">
+                <i class="fas fa-download" style="margin-right: 0.5rem;"></i>Download Resume
+            </a>
         </div>
     </section>
 
