Hide custom cursor on mobile view

--- a/index.html
+++ b/index.html
@@ -740,6 +740,12 @@
 
         /* Responsive */
         @media (max-width: 768px) {
+            body {
+                cursor: auto;
+            }
+            .cursor, .cursor-dot {
+                display: none;
+            }
             .hero-content h1 {
                 font-size: 2.2rem;
             }
