Add mobile view styles for symmetric buttons

--- a/index.html
+++ b/index.html
@@ -746,6 +746,14 @@
             .cursor, .cursor-dot {
                 display: none;
             }
+            .hero-content > a.btn {
+                margin-left: 0 !important;
+                width: 220px;
+                text-align: center;
+            }
+            .hero-content > a.btn + a.btn {
+                margin-top: 1rem;
+            }
             .hero-content h1 {
                 font-size: 2.2rem;
             }
